# PRAGmatic

./: Containerfile  README.md  api.py  contexter.py  elasticsearch-deployment.yaml  elasticsearch_init.py  finish_setup.sh  generator.py  graph.py  indexing-job.yaml  indexing.py  main.py  pipeline.py  pyproject.toml  rag-job.yaml  rag.py  requirements.txt  retriever.py  settings.py  setup.py  utils.py  vllm-deployment.yaml
contexters/: BasicContexter.py
generators/: BasicLLMGenerator.py
paragon/: api.py  main.py  settings.py
paragon/haystack/: docling_converter.py  docling_splitter.py
paragon/pipelines/: evaluation.py  indexing.py  rag.py  utils.py
pragmatic/: api.py  docling_splitter.py  finetuning.py  main.py  settings.py
pragmatic/haystack/: docling_splitter.py
pragmatic/optimizations/: finetuning.py
pragmatic/pipelines/: evaluation.py  indexing.py  pipeline.py  rag.py  streaming.py  utils.py
retrievers/: DummyRetriever.py  ElasticsearchRetriever.py
src/: evaluation.py  indexing.py  pipeline.py  rag.py
test/: Containerfile  sanity_test.py
test/yaml/: debug_pod.yaml  elasticsearch-deployment.yaml  indexing-job.yaml
yaml/: elasticsearch-deployment.yaml  indexing-job.yaml  milvus-deployment.yaml  rag-job.yaml  vllm-deployment.yaml
